fix uber-bad performance scaling with window size. not an issue on mobile

--- a/public/stylesheets/fonssignatus.css
+++ b/public/stylesheets/fonssignatus.css
@@ -118,8 +118,8 @@ text-size-adjust {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100%;
-  height: 170vh;
+  width: 10%;
+  height: 100vh;
   position: absolute;
   top: 1vh;
   left: 0;
